# llms-bridge-mcp

./: .env.template  README.md  mcp-config-http.json  mcp-config-local.json  mcp-config-sse.json  mcp-config-stdio.json  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/llms_bridge_mcp/: __init__.py  server.py
tests/: battle_test_results.json  test_server.py
